@@ -2,6 +2,8 @@
 
 General:
 01Jun07
+kes  Implement algorithm to handle only one appendable volume with
+     Prefer Mounted Volumes = no.
 kes  Fix a Bacula PostgreSQL bug dereferencing a NULL pointer      
      returned from a query.
 kes  Make volume lock recursive.
